@@ -90,7 +90,7 @@ UNLOCK TABLES;
 
 LOCK TABLES `tconfig` WRITE;
 /*!40000 ALTER TABLE `tconfig` DISABLE KEYS */;
-INSERT INTO `tconfig` VALUES (1,'language_code','en_GB'),(2,'block_size','25'),(3,'db_scheme_version','4.0'),(4,'db_scheme_build','130330'),(5,'date_format','F j, Y, g:i a'),(6,'currency','eu'),(8,'hours_perday','8'),(9,'FOOTER_EMAIL','Please do not respond directly this email, has been automatically created by Integria (http://integria.sourceforge.net).\n\nThanks for your time and have a nice day\n\n'),(10,'HEADER_EMAIL','Hello, \n\nThis is an automated message coming from Integria\n\n'),(11,'notification_period','24'),(14,'flash_charts','1'),(15,'fontsize','6'),(16,'auth_methods','mysql'),(17,'wiki_plugin_dir','include/wiki/plugins/'),(18,'conf_var_dir','wiki_data/'),(27,'enterprise_installed','1'),(28,'timezone','Europe/Madrid'),(29,'want_chat','0'),(30,'incident_creation_wu','0'),(31,'lead_company_filter',''),(32,'lead_warning_time','7'),(33,'months_to_delete_incidents','12'),(34,'sitename','Integria&#x20;IMS&#x20;-&#x20;the&#x20;ITIL&#x20;Management&#x20;System'),(35,'limit_size','250'),(36,'max_file_size','50M'),(37,'autowu_completion','0'),(38,'no_wu_completion',''),(39,'incident_reporter','0'),(40,'show_creator_incident','1'),(41,'show_owner_incident','1'),(42,'pwu_defaultime','4'),(43,'iwu_defaultime','0.25'),(44,'api_acl','127.0.0.1'),(45,'api_password',''),(46,'auto_incident_close','72'),(47,'email_on_incident_update','0'),(48,'error_log','1'),(49,'iw_creator_enabled','0'),(50,'enable_newsletter','0'),(51,'batch_newsletter','15'),(52,'enable_pass_policy','0'),(53,'pass_size','4'),(54,'pass_needs_numbers','0'),(55,'pass_needs_symbols','0'),(56,'pass_expire','0'),(57,'first_login','1'),(58,'mins_fail_pass','5'),(59,'number_attempts','5'),(60,'max_days_events','30'),(61,'max_days_incidents','15'),(62,'max_days_wu','365'),(63,'max_days_wo','365'),(64,'max_days_audit','15'),(65,'max_days_session','7'),(66, 'update_manager_installed', 1);;
+INSERT INTO `tconfig` VALUES (1,'language_code','en_GB'),(2,'block_size','25'),(3,'db_scheme_version','4.0'),(4,'db_scheme_build','130330'),(5,'date_format','F j, Y, g:i a'),(6,'currency','eu'),(8,'hours_perday','8'),(9,'FOOTER_EMAIL','Please do not respond directly this email, has been automatically created by Integria (http://integria.sourceforge.net).\n\nThanks for your time and have a nice day\n\n'),(10,'HEADER_EMAIL','Hello, \n\nThis is an automated message coming from Integria\n\n'),(11,'notification_period','24'),(14,'flash_charts','1'),(15,'fontsize','6'),(16,'auth_methods','mysql'),(17,'wiki_plugin_dir','include/wiki/plugins/'),(18,'conf_var_dir','wiki_data/'),(27,'enterprise_installed','1'),(28,'timezone','Europe/Madrid'),(29,'want_chat','0'),(30,'incident_creation_wu','0'),(31,'lead_company_filter',''),(32,'lead_warning_time','7'),(33,'months_to_delete_incidents','12'),(34,'sitename','Integria&#x20;IMS&#x20;-&#x20;the&#x20;ITIL&#x20;Management&#x20;System'),(35,'limit_size','250'),(36,'max_file_size','50M'),(37,'autowu_completion','0'),(38,'no_wu_completion',''),(39,'incident_reporter','0'),(40,'show_creator_incident','1'),(41,'show_owner_incident','1'),(42,'pwu_defaultime','4'),(43,'iwu_defaultime','0.25'),(44,'api_acl','127.0.0.1'),(45,'api_password',''),(46,'auto_incident_close','72'),(47,'email_on_incident_update','0'),(48,'error_log','1'),(49,'iw_creator_enabled','0'),(50,'enable_newsletter','0'),(51,'batch_newsletter','15'),(52,'enable_pass_policy','0'),(53,'pass_size','4'),(54,'pass_needs_numbers','0'),(55,'pass_needs_symbols','0'),(56,'pass_expire','0'),(57,'first_login','1'),(58,'mins_fail_pass','5'),(59,'number_attempts','5'),(60,'max_days_events','30'),(61,'max_days_incidents','15'),(62,'max_days_wu','365'),(63,'max_days_wo','365'),(64,'max_days_audit','15'),(65,'max_days_session','7'),(66, 'update_manager_installed', 1), (67, 'current_package', 0), (68, 'url_updatemanager', 'https://artica.es/integriaupdate4/server.php'), (69, 'license', 'INTEGRIA-FREE');;
 /*!40000 ALTER TABLE `tconfig` ENABLE KEYS */;
 UNLOCK TABLES;
 
